--- a/styles/components/_features.scss
+++ b/styles/components/_features.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    min-height: 12rem;
+    min-height: 20rem;
   }
 
   &__desktop {
@@ -47,7 +47,7 @@
     font-style: normal;
     font-weight: bold;
     font-size: 1.8rem;
-    line-height: 2.2rem;
+    line-height: 3rem;
     color: #161616;
   }
 }
@@ -71,42 +71,61 @@
     &__block {
       flex-direction: column;
       height: 14rem;
+
+      & img {
+        height: 48px;
+        width: 48px;
+      }
     }
 
     &__name {
       font-weight: bold;
       font-size: 2.6rem;
-      width: 155px;
+      width: 60%;
       text-align: center;
       margin-top: 1rem;
     }
+  }
+
+  #auto {
+    width: 65px;
   }
 }
 
 @media screen and (max-width: 480px) {
   .features {
     &__container {
-      height: 25rem;
+      min-height: 25rem;
     }
+
     &__block {
       border-right: none;
-      width: 50%;
+      width: 70%;
       margin-right: 0;
     }
+
     &__block img {
-      width: 38px;
-      height: 38px;
+      width: 35px;
+      height: 35px;
     }
+
     &__name {
       width: 100px;
+      line-height: 4rem;
     }
+
     &__swiper {
       padding: 8rem;
       width: 100vw;
     }
 
-  &__btn {
-    display: none;
+    &__btn {
+      display: none;
+    }
   }
+
+  #auto {
+    width: 55px;
+    height: 55px;
   }
 }
