--- a/styles/components/_products.scss
+++ b/styles/components/_products.scss
@@ -1,24 +1,5 @@
 .products {
   padding: 3rem 0;
-  //min-height: 82.3rem;
-
-  // &__right-columns {
-  //   display: grid;
-  //   grid-template-columns: repeat(2, 1fr);
-  //   grid-template: 23rem 23rem 23rem / repeat(2, 1fr);
-  //   grid-template-areas:
-  //     "fifth sixth "
-  //     "fifth seventh"
-  //     "eighth eighth";
-  //   gap: 1rem;
-  //   border-radius: 2rem;
-  //   & div{
-  //     transition: transform 0.5s ease;
-  //   }
-  //   & div:hover{
-  //     transform: scale(1.02);
-  //   }
-  // }
 
   &__grid-wrapper {
     display: grid;
@@ -36,25 +17,7 @@
         & div:hover{
           transform: scale(1.02);
         }
-
   }
-
-  // &__left-column {
-  //   display: grid;
-  //   grid-template: 23rem 23rem 23rem / repeat(2, 1fr);
-  //   grid-template-areas:
-  //     "first   first"
-  //     "second  third"
-  //     "fourth  fourth";
-  //   gap: 1rem;
-  //   border-radius: 2rem;
-  //   & div{
-  //     transition: transform 0.5s ease;
-  //   }
-  //   & div:hover{
-  //     transform: scale(1.02);
-  //   }
-  // }
 
   &__cards {
     position: relative;
@@ -105,7 +68,6 @@
     &_8 {
       position: relative;
       grid-area: eighth;
-      //z-index: 10;
       cursor: pointer;
     }
   }
@@ -113,10 +75,6 @@
   &__img {
     width: 100%;
     height: 100%;
-
-    &_h {
-      //width: 99.1%;
-    }
   }
 
   &__menu {
@@ -139,9 +97,8 @@
     line-height: 2.4rem;
     color: #161616;
     margin-bottom: 2.8rem;
+    width: 85%;
   }
-
-  
 }
 
 @media screen and (max-width: 1100px) {
@@ -195,6 +152,11 @@
 
 @media screen and (max-width: 480px) {
   .products {
+
+    & button {
+    height: 20px;
+    width: 20px;
+    }
     padding-bottom: 0;
     &__grid-wrapper {
       grid-template-rows: repeat(8, 65px);
@@ -223,8 +185,10 @@
     }
     &__name {
       margin: 0;
-      font-size: 14px;
-      font-weight: bold;
+      font-size: 12px;
+      //font-weight: bold;
+      line-height: 4rem;
+      width: 90%;
     }
     &__cards_3 {
       margin-left: 0;
