--- a/styles/components/_reviews.scss
+++ b/styles/components/_reviews.scss
@@ -129,6 +129,9 @@
       min-height: 40rem;
       box-shadow: 0 0 0.5rem 0.5rem rgba(204, 201, 201, 0.5);
     }
+    &__item-text {
+      line-height: 3.5rem;
+    }
     &__author {
       font-size: 14px;
     }
@@ -155,6 +158,7 @@
       position: relative;
       z-index: 100;
       width: 100%;
+      line-height: 4rem;
     }
   }
 }
