--- a/styles/components/_features.scss
+++ b/styles/components/_features.scss
@@ -81,14 +81,15 @@
     &__name {
       font-weight: bold;
       font-size: 2.6rem;
-      width: 60%;
+      width: 70%;
       text-align: center;
       margin-top: 1rem;
     }
   }
 
   #auto {
-    width: 65px;
+    width: 70px;
+    height: 65px;
   }
 }
 
@@ -100,7 +101,7 @@
 
     &__block {
       border-right: none;
-      width: 70%;
+      width: 100%;
       margin-right: 0;
     }
 
