--- a/styles/main.css
+++ b/styles/main.css
@@ -1642,12 +1642,13 @@ input {
   .features__name {
     font-weight: bold;
     font-size: 2.6rem;
-    width: 60%;
+    width: 70%;
     text-align: center;
     margin-top: 1rem;
   }
   #auto {
-    width: 65px;
+    width: 70px;
+    height: 65px;
   }
 }
 
@@ -1657,7 +1658,7 @@ input {
   }
   .features__block {
     border-right: none;
-    width: 70%;
+    width: 100%;
     margin-right: 0;
   }
   .features__block img {
@@ -2259,7 +2260,7 @@ input {
     z-index: 100;
     margin-top: 20px;
     margin-left: 0;
-    line-height: 4rem;
+    line-height: 4.5rem;
   }
   .reviews__button {
     width: 140px;
