fix: position btn-close feedback

--- a/styles/components/_feedback.scss
+++ b/styles/components/_feedback.scss
@@ -116,6 +116,7 @@
         &__btn-close {
             position: absolute;
             right: 0;
+            top: 0;
             width: 7rem;
             height: 7rem;
             font-size: 4rem;
