--- a/styles/main.css
+++ b/styles/main.css
@@ -7473,6 +7473,7 @@ input {
   .feedback__btn-close {
     position: absolute;
     right: 0;
+    top: 0;
     width: 7rem;
     height: 7rem;
     font-size: 4rem;
