--- a/styles/components/_feedback.scss
+++ b/styles/components/_feedback.scss
@@ -102,6 +102,7 @@
         right: 0;
         top: 0;
         background: #FFF;
+        color: #000;
         height: 100vh;
         font-size: 50px;
         padding: 3rem;
