refactor: change font size name on features block

--- a/styles/components/_features.scss
+++ b/styles/components/_features.scss
@@ -125,7 +125,8 @@
 
     &__name {
       width: 100px;
-      line-height: 4rem;
+      line-height: 3rem;
+      font-size: 12px;
     }
 
     &__swiper {
