--- a/styles/components/_features.scss
+++ b/styles/components/_features.scss
@@ -119,14 +119,14 @@
     }
 
     &__block img {
-      width: 35px;
-      height: 35px;
+      width: 30px;
+      height: 30px;
     }
 
     &__name {
-      width: 100px;
+      width: 100%;
       line-height: 3rem;
-      font-size: 12px;
+      font-size: 10px;
     }
 
     &__swiper {
@@ -140,7 +140,7 @@
   }
 
   #auto {
-    width: 55px;
-    height: 55px;
+    width: 45px;
+    height: 30px;
   }
 }
