refactor: add dr tag name on features block

--- a/styles/components/_features.scss
+++ b/styles/components/_features.scss
@@ -76,6 +76,7 @@
     &__block {
       flex-direction: column;
       height: 14rem;
+      align-items: center;
 
       & img {
         height: 48px;
