--- a/styles/main.css
+++ b/styles/main.css
@@ -1637,6 +1637,9 @@ input {
         -ms-flex-direction: column;
             flex-direction: column;
     height: 14rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .features__block img {
     height: 48px;
